<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="@dimen/layout_padding"
    android:background="@color/background">

    <EditText
        android:id="@+id/task_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/task_name"
        android:layout_marginBottom="@dimen/layout_padding"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginBottom="@dimen/layout_padding" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/priority"
            android:paddingRight="@dimen/layout_padding"
            />

        <Spinner
            android:id="@+id/priority"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:entries="@array/priorities"
            android:spinnerMode="dropdown"
            android:prompt="@string/priority"
            />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginBottom="@dimen/layout_padding" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/due_date"
            android:paddingRight="@dimen/layout_padding"
            />

        <Button
            android:id="@+id/due_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

    </LinearLayout>

    <LinearLayout android:layout_width="wrap_content" android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal" android:orientation="horizontal" >
        <Button android:id="@+id/save_button"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:background="@drawable/bg_selector"
            android:layout_gravity="center"
            android:paddingLeft="30dp"
            android:paddingRight="30dp"
            android:text="@string/save" />
        <Button android:id="@+id/delete_button"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_width="wrap_content"
            android:background="@drawable/bg_selector"
            android:layout_gravity="center"
            android:paddingLeft="30dp"
            android:paddingRight="30dp"
            android:text="@string/delete" />
    </LinearLayout>
</LinearLayout>